[gd_scene load_steps=6 format=3 uid="uid://b36273ltrqj67"]

[ext_resource type="Script" uid="uid://8vbpy6c1xe4d" path="res://Tutorial-Specific/Scripts/second.gd" id="1_u0yl2"]
[ext_resource type="AudioStream" uid="uid://ds55l6q5qn2a2" path="res://Assets/sfx/Voicelines/A cooked patty.mp3" id="2_04km2"]
[ext_resource type="AudioStream" uid="uid://bkoxp0j33sel5" path="res://Assets/sfx/Voicelines/Recipe board 2.wav" id="3_fbrhf"]
[ext_resource type="AudioStream" uid="uid://jvjvp681s2vf" path="res://Assets/sfx/Voicelines/Knife 1.wav" id="4_04km2"]

[sub_resource type="BoxShape3D" id="BoxShape3D_04km2"]
size = Vector3(1, 2, 3)

[node name="Second" type="Area3D"]
script = ExtResource("1_u0yl2")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
shape = SubResource("BoxShape3D_04km2")

[node name="voice1" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("2_04km2")
pitch_scale = 0.9

[node name="voice2" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("3_fbrhf")
pitch_scale = 0.9

[node name="voice3" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("4_04km2")
pitch_scale = 0.9

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
